--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,13 @@
-page-home {
 
+ion-navbar {
+  height: 50px;
+  text-align: center;
+}
+
+button[color='primary'] {
+  text-align: center;
+}
+
+p.ionhome {
+  text-align: center;
 }
